<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=".NET Developer"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/careerNote"
        android:layout_gravity="center"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Experience"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/experience"
        android:layout_gravity="center"
        android:textAlignment="center"
        />
</LinearLayout>